--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <header class="mb-5">
                     <h1> ARUNKUMAR ELANGO</mh1>
                 </header>
-                <P class="mb-5">“If you don’t give up, You still have a Chance to Win. Giving up is a Great Failure.”
+                <P class="mb-5">“Nobody moves! I dropped my brain.”
                     </P>
 
 
