--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="row cb-slideshow-text-container ">
             <div class="tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
                 <header class="mb-5">
-                    <h1> ARUNKUMAR ELANGO</mh1>
+                    <h1> 𝔸𝕣𝕦𝕟𝕜𝕦𝕞𝕒𝕣 𝔼𝕝𝕒𝕟𝕘𝕠</mh1>
                 </header>
-                <P class="mb-5">“Nobody moves! I dropped my brain.”
+                <P class="mb-5">““🆈🅾🆄 🅶🅾🆃🆃🅰 🅱🅴 🅲🅰🆁🅴🅵🆄🅻: 🅳🅾🅽'🆃 🆂🅰🆈 🅰 🆆🅾🆁🅳 🆃🅾 🅽🅾🅱🅾🅳🆈 🅰🅱🅾🆄🆃 🅽🅾🆃🅷🅸🅽🅶 🅰🅽🆈🆃🅸🅼🅴 🅴🆅🅴🆁””
                     </P>
 
 
